@@ -601,17 +601,3 @@ end
 function DB.RemoveGlobals()
 	sql.Query("DELETE FROM darkrp_globals;")
 end
-
-function SendGlobalIntsOnSpawn(ply)
-	for k,v in pairs(GlobalInts) do
-		if v ~= 0 then
-			umsg.Start("FRecieveGlobalInt", ply)
-				umsg.Long(v)
-				umsg.String(k)
-			umsg.End()
-		else
-			GlobalInts[k] = nil
-		end
-	end
-end
-hook.Add("PlayerInitialSpawn", "SendGlobalIntsOnSpawn", SendGlobalIntsOnSpawn)
